--- a/src/less/contact.less
+++ b/src/less/contact.less
@@ -23,6 +23,9 @@
             .btn {
                 border-radius: 20px;
                 width: 10%;
+                @media @tablet {
+                    width: 80%;
+                }
             }
         }
         
